@@ -76,6 +76,7 @@ libtiff_la_SOURCES = \
 	tif_jpeg.c \
 	tif_jpeg_12.c \
 	tif_luv.c \
+	tif_lzma.c \
 	tif_lzw.c \
 	tif_next.c \
 	tif_ojpeg.c \
