@@ -1,3 +1,8 @@
+2010-12-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* libtiff/Makefile.am (libtiff_la_SOURCES): Added tif_lzma.c to
+	Makefile.
+
 2010-12-14  Lee Howard <faxguy@howardsilvan.com>
 
 	* libtiff/tif_dirread.c: tolerate some cases where
